--- a/index.html
+++ b/index.html
@@ -56,5 +56,10 @@
     <footer id="info">
       <p>Double-click to edit a todo</p>
     </footer>
+
+    <script src="js/libs/jquery-1.10.2.js"></script>
+    <script src="js/libs/handlebars-1.1.2.js"></script>
+    <script src="js/libs/ember-1.5.1.js"></script>
+    <script src="js/libs/ember-data-1.0.0-beta.7.js"></script>
   </body>
 </html>
