--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <script src="js/libs/handlebars-1.1.2.js"></script>
     <script src="js/libs/ember-1.5.1.js"></script>
     <script src="js/libs/ember-data-1.0.0-beta.7.js"></script>
+    <script src="js/libs/localstorage_adapter.js"></script>
 
     <script src="js/application.js"></script>
     <script src="js/router.js"></script>
